// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SVGIcon renders correctly when given invert flag 1`] = `""`;

exports[`SVGIcon renders correctly when given svgData 1`] = `
<styled.div>
  <styled.svg
    preserveAspectRatio="xMidYMid meet"
    theme={
      Object {
        "backgroundDanger": "#ED524C",
        "backgroundDangerDisabled": "#E6E7E8",
        "backgroundInput": "#FFFFFF",
        "backgroundPrimary": "#50A5E7",
        "backgroundPrimaryDisabled": "#E6E7E8",
        "backgroundSecondary": "#FFFFFF",
        "backgroundSecondaryDisabled": "#FFFFFF",
        "backgroundSecondaryHover": "#FFFFFF",
        "textBody": "#3F484B",
        "textDanger": "#FFFFFF",
        "textDangerDisabled": "#CDD0D2",
        "textDangerHover": "#FFFFFF",
        "textHeading": "#3F484B",
        "textIcon": "#FFFFFF",
        "textIconInvert": "#222729",
        "textInput": "#3F484B",
        "textInputFocus": "#8B9193",
        "textInputInvalid": "#E92720",
        "textInputPlaceholder": "#B2B5B7",
        "textPrimary": "#3F484B",
        "textPrimaryDisabled": "#8B9193",
        "textPrimaryHover": "#FFFFFF",
        "textPrimaryInvert": "#FFFFFF",
        "textSecondary": "#3F484B",
        "textSecondaryDisabled": "#CDD0D2",
        "textSecondaryHover": "#FFFFFF",
        "textSubtitle": "#8B9193",
      }
    }
    viewBox="0 0 24 24"
  />
</styled.div>
`;

exports[`SVGIcon renders correctly with a valid size and a valid name that references an SVG without a defined viewBox 1`] = `
<styled.div
  large={true}
  top={20}
>
  <styled.svg
    preserveAspectRatio="xMidYMid meet"
    theme={
      Object {
        "backgroundDanger": "#ED524C",
        "backgroundDangerDisabled": "#E6E7E8",
        "backgroundInput": "#FFFFFF",
        "backgroundPrimary": "#50A5E7",
        "backgroundPrimaryDisabled": "#E6E7E8",
        "backgroundSecondary": "#FFFFFF",
        "backgroundSecondaryDisabled": "#FFFFFF",
        "backgroundSecondaryHover": "#FFFFFF",
        "textBody": "#3F484B",
        "textDanger": "#FFFFFF",
        "textDangerDisabled": "#CDD0D2",
        "textDangerHover": "#FFFFFF",
        "textHeading": "#3F484B",
        "textIcon": "#FFFFFF",
        "textIconInvert": "#222729",
        "textInput": "#3F484B",
        "textInputFocus": "#8B9193",
        "textInputInvalid": "#E92720",
        "textInputPlaceholder": "#B2B5B7",
        "textPrimary": "#3F484B",
        "textPrimaryDisabled": "#8B9193",
        "textPrimaryHover": "#FFFFFF",
        "textPrimaryInvert": "#FFFFFF",
        "textSecondary": "#3F484B",
        "textSecondaryDisabled": "#CDD0D2",
        "textSecondaryHover": "#FFFFFF",
        "textSubtitle": "#8B9193",
      }
    }
    viewBox="0 0 24 24"
  >
    <g
      fillRule="evenodd"
      transform="translate(0 2)"
    >
      <path
        d="M14.4 0H1.6C.712 0 .008.712.008 1.6L0 11.2c0 .888.712 1.6 1.6 1.6h12.8c.888 0 1.6-.712 1.6-1.6V1.6c0-.888-.712-1.6-1.6-1.6zm0 11.2H1.6V6.4h12.8v4.8zm0-8H1.6V1.6h12.8v1.6z"
      />
    </g>
  </styled.svg>
</styled.div>
`;

exports[`SVGIcon renders correctly with an undefined size and a valid name that references an SVG with a defined viewBox 1`] = `
<styled.div>
  <styled.svg
    preserveAspectRatio="xMidYMid meet"
    theme={
      Object {
        "backgroundDanger": "#ED524C",
        "backgroundDangerDisabled": "#E6E7E8",
        "backgroundInput": "#FFFFFF",
        "backgroundPrimary": "#50A5E7",
        "backgroundPrimaryDisabled": "#E6E7E8",
        "backgroundSecondary": "#FFFFFF",
        "backgroundSecondaryDisabled": "#FFFFFF",
        "backgroundSecondaryHover": "#FFFFFF",
        "textBody": "#3F484B",
        "textDanger": "#FFFFFF",
        "textDangerDisabled": "#CDD0D2",
        "textDangerHover": "#FFFFFF",
        "textHeading": "#3F484B",
        "textIcon": "#FFFFFF",
        "textIconInvert": "#222729",
        "textInput": "#3F484B",
        "textInputFocus": "#8B9193",
        "textInputInvalid": "#E92720",
        "textInputPlaceholder": "#B2B5B7",
        "textPrimary": "#3F484B",
        "textPrimaryDisabled": "#8B9193",
        "textPrimaryHover": "#FFFFFF",
        "textPrimaryInvert": "#FFFFFF",
        "textSecondary": "#3F484B",
        "textSecondaryDisabled": "#CDD0D2",
        "textSecondaryHover": "#FFFFFF",
        "textSubtitle": "#8B9193",
      }
    }
    viewBox="0 0 16 16"
  >
    <g
      fillRule="evenodd"
      transform="translate(1 1)"
    >
      <path
        d="M7 5.77L12.77 0 14 1.23 8.23 7 14 12.77 12.77 14 7 8.23 1.23 14 0 12.77 5.77 7 0 1.23 1.23 0 7 5.77z"
      />
    </g>
  </styled.svg>
</styled.div>
`;

exports[`SVGIcon renders nothing with an invalid name and undefined size attribute 1`] = `""`;

exports[`SVGIcon renders nothing with an undefined name and undefined size 1`] = `""`;

exports[`SVGIcon renders nothing with invalid name and invalid size 1`] = `""`;

exports[`SVGIconDivStyled renders correctly with defined invalid container size 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0px;
  width: 16px;
  height: 16px;
}

<div
  className="c0"
/>
`;

exports[`SVGIconDivStyled renders correctly with defined top 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 10px;
  width: 16px;
  height: 16px;
}

<div
  className="c0"
/>
`;

exports[`SVGIconDivStyled renders correctly with defined valid container size 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0px;
  width: 56px;
  height: 56px;
}

<div
  className="c0"
/>
`;

exports[`SVGIconDivStyled renders correctly with defined valid container size 2`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0px;
  width: 32px;
  height: 32px;
}

<div
  className="c0"
/>
`;

exports[`SVGIconDivStyled renders correctly with defined valid container size 3`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0px;
  width: 24px;
  height: 24px;
}

<div
  className="c0"
/>
`;

exports[`SVGIconSvgStyled renders correctly with defined color 1`] = `
.c0 {
  fill: red;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 auto;
  width: 100%;
  height: auto;
}

<svg
  className="c0"
  fill="red"
/>
`;

exports[`SVGIconSvgStyled renders correctly with invert flag 1`] = `
.c0 {
  fill: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 auto;
  width: 100%;
  height: auto;
}

<svg
  className="c0"
/>
`;

exports[`SVGIconSvgStyled renders correctly without any defined attributes 1`] = `
.c0 {
  fill: #3F484B;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin: 0 auto;
  width: 100%;
  height: auto;
}

<svg
  className="c0"
/>
`;
